# zero-to-main

./: README.md
from-scratch/: Cargo.toml  debug.gdb  linker.ld
from-scratch/.cargo/: config
from-scratch/src/: main.rs  nrf52.rs
ztm-hello/: Cargo.toml  memory.x
ztm-hello/src/: main.rs
