[package]
name = "from-scratch"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]

[profile.release]
codegen-units   = 1
debug           = true
incremental     = false
lto             = true
opt-level       = 's'
panic           = "abort"
