[package]
name = "ztm-hello"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-reset = "0.1.0"

[dependencies.dwm1001]
version = "0.3.0"
features = ["dev", "rt"]

[profile.release]
codegen-units   = 1
debug           = true
incremental     = false
lto             = true
opt-level       = 's'
panic           = "abort"
